--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,10 +27,15 @@ services:
     ports:
       - "8081:8081"
     env_file: .env
+    depends_on:
+      rabbitmq:
+        condition: service_started
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8081/api/payment/health" ]
-      interval: 5s
+      test: [ "CMD", "wget", "-q", "--spider", "http://localhost:8081/api/payment/health" ]
+      interval: 10s
+      timeout: 5s
       retries: 5
+      start_period: 10s
 
 
   frontend:
