--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -2,12 +2,15 @@ events {}
 http {
   server {
     listen 80;
+
     location /api/ticket/ {
-      proxy_pass http://ticket-service:8080/;
+      proxy_pass http://ticket-service:8080/api/ticket/;
     }
+
     location /api/payment/ {
-      proxy_pass http://payment-service:8081/;
+      proxy_pass http://payment-service:8081/api/payment/;
     }
+
     location / {
       proxy_pass http://frontend:5173/;
     }
