--- a/services/payment-service/package.json
+++ b/services/payment-service/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "express": "^4.19.2",
-    "amqplib": "^0.10.3"
+    "pg": "^8.11.3"
   }
 }
